// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckboxGroup > should match snapshot 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-4 el-checkbox"
  >
    <input
      aria-hidden="true"
      class="mocked-styled-5 el-checkbox-input"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="mocked-styled-1 el-checkbox-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2Zm0,18H4V4H20Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="mocked-styled-2 el-checkbox-selected-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2ZM18,9.17l-7.07,7.07a1,1,0,0,1-.71.3,1,1,0,0,1-.7-.3L6,12.71a1,1,0,0,1,0-1.42,1,1,0,0,1,1.41,0l2.83,2.83L16.6,7.76A1,1,0,0,1,18,9.17Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="mocked-styled-6 el-checkbox-label-text el-label-text"
      data-size="medium"
      data-variant="strong"
    />
    <span
      class="mocked-styled-7 el-checkbox-supplementary-info el-label-text"
      data-size="small"
      data-variant="soft"
    />
  </label>
</DocumentFragment>
`;

exports[`CheckboxGroup > should match snapshot with Checkbox with Label 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-4 el-checkbox"
  >
    <input
      aria-hidden="true"
      class="mocked-styled-5 el-checkbox-input"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="mocked-styled-1 el-checkbox-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2Zm0,18H4V4H20Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="mocked-styled-2 el-checkbox-selected-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2ZM18,9.17l-7.07,7.07a1,1,0,0,1-.71.3,1,1,0,0,1-.7-.3L6,12.71a1,1,0,0,1,0-1.42,1,1,0,0,1,1.41,0l2.83,2.83L16.6,7.76A1,1,0,0,1,18,9.17Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="mocked-styled-6 el-checkbox-label-text el-label-text"
      data-size="medium"
      data-variant="strong"
    >
      Label
    </span>
    <span
      class="mocked-styled-7 el-checkbox-supplementary-info el-label-text"
      data-size="small"
      data-variant="soft"
    />
  </label>
</DocumentFragment>
`;

exports[`CheckboxGroup > should match snapshot with Checkbox with Label and Suppliemntary text 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-4 el-checkbox"
  >
    <input
      aria-hidden="true"
      class="mocked-styled-5 el-checkbox-input"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="mocked-styled-1 el-checkbox-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2Zm0,18H4V4H20Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="mocked-styled-2 el-checkbox-selected-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2ZM18,9.17l-7.07,7.07a1,1,0,0,1-.71.3,1,1,0,0,1-.7-.3L6,12.71a1,1,0,0,1,0-1.42,1,1,0,0,1,1.41,0l2.83,2.83L16.6,7.76A1,1,0,0,1,18,9.17Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="mocked-styled-6 el-checkbox-label-text el-label-text"
      data-size="medium"
      data-variant="strong"
    >
      Label
    </span>
    <span
      class="mocked-styled-7 el-checkbox-supplementary-info el-label-text"
      data-size="small"
      data-variant="soft"
    >
      Supplementary Info
    </span>
  </label>
</DocumentFragment>
`;

exports[`CheckboxGroup > should match snapshot with disabled Checkbox 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-4 el-checkbox"
  >
    <input
      aria-hidden="true"
      class="mocked-styled-5 el-checkbox-input"
      disabled=""
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="mocked-styled-1 el-checkbox-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2Zm0,18H4V4H20Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="mocked-styled-2 el-checkbox-selected-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2ZM18,9.17l-7.07,7.07a1,1,0,0,1-.71.3,1,1,0,0,1-.7-.3L6,12.71a1,1,0,0,1,0-1.42,1,1,0,0,1,1.41,0l2.83,2.83L16.6,7.76A1,1,0,0,1,18,9.17Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="mocked-styled-6 el-checkbox-label-text el-label-text"
      data-size="medium"
      data-variant="strong"
    >
      Label
    </span>
    <span
      class="mocked-styled-7 el-checkbox-supplementary-info el-label-text"
      data-size="small"
      data-variant="soft"
    >
      Supplementary Info
    </span>
  </label>
</DocumentFragment>
`;

exports[`CheckboxGroup > should match snapshot with indeterminate Checkbox 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-4 el-checkbox"
  >
    <input
      aria-hidden="true"
      class="mocked-styled-5 el-checkbox-input"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="mocked-styled-1 el-checkbox-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2Zm0,18H4V4H20Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="mocked-styled-2 el-checkbox-selected-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2ZM18,9.17l-7.07,7.07a1,1,0,0,1-.71.3,1,1,0,0,1-.7-.3L6,12.71a1,1,0,0,1,0-1.42,1,1,0,0,1,1.41,0l2.83,2.83L16.6,7.76A1,1,0,0,1,18,9.17Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="mocked-styled-3 el-checkbox-indeterminate-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2Zm0,18H4V4H20Z"
        fill="currentColor"
      />
      <path
        d="M8,13h8a1,1,0,0,0,0-2H8a1,1,0,0,0,0,2Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="mocked-styled-6 el-checkbox-label-text el-label-text"
      data-size="medium"
      data-variant="strong"
    >
      Label
    </span>
    <span
      class="mocked-styled-7 el-checkbox-supplementary-info el-label-text"
      data-size="small"
      data-variant="soft"
    >
      Supplementary Info
    </span>
  </label>
</DocumentFragment>
`;

exports[`CheckboxGroup > should match snapshot with required Checkbox 1`] = `
<DocumentFragment>
  <label
    class="mocked-styled-4 el-checkbox"
  >
    <input
      aria-hidden="true"
      class="mocked-styled-5 el-checkbox-input"
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="mocked-styled-1 el-checkbox-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2Zm0,18H4V4H20Z"
        fill="currentColor"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="mocked-styled-2 el-checkbox-selected-svg-icon"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20,2H4A2,2,0,0,0,2,4V20a2,2,0,0,0,2,2H20a2,2,0,0,0,2-2V4A2,2,0,0,0,20,2ZM18,9.17l-7.07,7.07a1,1,0,0,1-.71.3,1,1,0,0,1-.7-.3L6,12.71a1,1,0,0,1,0-1.42,1,1,0,0,1,1.41,0l2.83,2.83L16.6,7.76A1,1,0,0,1,18,9.17Z"
        fill="currentColor"
      />
    </svg>
    <span
      class="mocked-styled-6 el-checkbox-label-text el-label-text"
      data-size="medium"
      data-variant="strong"
    >
      Label
      <span
        aria-label="(Required)"
      >
         *
      </span>
    </span>
    <span
      class="mocked-styled-7 el-checkbox-supplementary-info el-label-text"
      data-size="small"
      data-variant="soft"
    >
      Supplementary Info
    </span>
  </label>
</DocumentFragment>
`;
